syntax = "proto3";
package guestbook;

import "google/protobuf/timestamp.proto";

option go_package = "example.com/guestbook";

message Comment {
   int32 commentsId = 1;
   string commentsAuthor = 2;
   string commentsContent = 3;
   google.protobuf.Timestamp commentsTime = 4;
}
